# pypeaday-base-images

./: .gitignore  .pre-commit-config.yaml  404.html  404.md  README.md  hello-world.md  index.html  index.md  manifest.json  markata.json  rss.xml
.github/workflows/: ci-hello-world.yml  ci-markata-blog.yml  ci-markata-docs.yml  ci-pypeday-hello-world.yml  ci-python-hello-world.yml  ci.yml  hello-world.yml  python-hello-world.yml
_logs/debug/: index.html
_logs/info/: index.html
_logs/warning/: index.html
_profile/: index.html
all/: index.html
archive/: index.html
draft/: index.html
example-markata-blog/: .copier-answers.yml  markata.toml  pyproject.toml
example-markata-blog/pages/: creating-feeds.md  ipython.md  your-own-style.md
hello-world/: Dockerfile  alpine.Dockerfile  hello.sh  index.html
markata-docs/: .copier-answers.yml  Dockerfile  markata.toml  pyproject.toml
markata-docs/.github/workflows/: build-site.yml
markata-docs/markata_docs/: __about__.py  __init__.py
markata-docs/pages/: 404.md  building-the-site.md  hello-world.md  index.md  jinja.md
published/: index.html
python-hello-world/: Dockerfile  README.md  pyproject.toml
python-hello-world/python_hello_world/: __about__.py  main.py
python-hello-world/tests/: test_main.py  test_never.py
