[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markata_docs"

description = "Docs for my Base Images Repo, also an example of CI and Dockerizing a website"

readme = "README.md"
requires-python = ">=3.7"
license = "MIT"


authors = [
  { name = "Pypeaday", email = "base-images@pype.dev" },
]


dependencies = ['markata~=0.6.0.dev0']
dynamic = ["version"]

[tool.hatch.version]
path = "markata_docs/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pyinstrument",
]

[tool.hatch.envs.default.scripts]
clean = "markata clean"
build = "markata build"
tui = "markata tui"
serve = "python -m http.server 8000 --directory=markout"
clean-build = ['clean', 'build',]
clean-tui = ['clean', 'build', 'tui']
