[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-hello-world"
description = 'Minimal example dockerized python application to use as example for CI pipeline'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Pypeaday", email = "pypeaday@pm.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["typer[all]", "rich"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/python-hello-world#readme"
Issues = "https://github.com/unknown/python-hello-world/issues"
Source = "https://github.com/unknown/python-hello-world"

[tool.hatch.version]
path = "python_hello_world/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=python_hello_world --cov=tests {args}"
no-cov = "cov --no-cov {args}"
main = "python3 python_hello_world/main.py"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "python_hello_world/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
